--- a/datos_elecciones.ipynb
+++ b/datos_elecciones.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "4  022016061019990000680142625800023"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,13 +71,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "votos = pd.read_csv('/Users/miryamdominguez/Downloads/DATOS ELECCIONES 2016/08021606BUENO.CSV', index_col=False )\n",
+    "votos = pd.read_csv('08021606.csv', index_col=False )\n",
     "votos.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -305,12 +305,13 @@
        "[827 rows x 10 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Función para obtener datos del csv según formato marcado por el minsiterio del interior.\n",
     "def get_cosas (x):\n",
     "    foo = x['codigo_elecciones']\n",
     "    tipo_eleccion = []\n",
@@ -343,6 +344,460 @@
     "my_data = get_cosas(votos)\n",
     "my_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>codigo_candidatura</th>\n",
+       "      <th>siglas</th>\n",
+       "      <th>denominación</th>\n",
+       "      <th>codigo_nacional</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ALCD</td>\n",
+       "      <td>ALIANZA DE CENTRO DEMOCRÁTICO</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>AND</td>\n",
+       "      <td>PARTIDO SOMOS ANDALUCES POR ANDALUCÍA Y LOS PU...</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>BNG-NÓS</td>\n",
+       "      <td>BNG-NÓS CANDIDATURA GALEGA</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>CCa-PNC</td>\n",
+       "      <td>COALICIÓN CANARIA-PARTIDO NACIONALISTA CANARIO</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>CCD</td>\n",
+       "      <td>CIUDADANOS DE CENTRO DEMOCRÁTICO</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>76</td>\n",
+       "      <td>89</td>\n",
+       "      <td>UNIDOS PODE</td>\n",
+       "      <td>UNIDOS PODEMOS</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>77</td>\n",
+       "      <td>91</td>\n",
+       "      <td>UPL</td>\n",
+       "      <td>UNIÓN DEL PUEBLO LEONÉS</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>78</td>\n",
+       "      <td>92</td>\n",
+       "      <td>UPN-PP</td>\n",
+       "      <td>UNIÓN DEL PUEBLO NAVARRO EN COALICIÓN CON EL P...</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>79</td>\n",
+       "      <td>93</td>\n",
+       "      <td>UPyD</td>\n",
+       "      <td>UNIÓN PROGRESO Y DEMOCRACIA</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>80</td>\n",
+       "      <td>94</td>\n",
+       "      <td>VOX</td>\n",
+       "      <td>VOX</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    codigo_candidatura       siglas  \\\n",
+       "0                    1         ALCD   \n",
+       "1                    2          AND   \n",
+       "2                    5      BNG-NÓS   \n",
+       "3                    7      CCa-PNC   \n",
+       "4                    8          CCD   \n",
+       "..                 ...          ...   \n",
+       "76                  89  UNIDOS PODE   \n",
+       "77                  91          UPL   \n",
+       "78                  92       UPN-PP   \n",
+       "79                  93         UPyD   \n",
+       "80                  94          VOX   \n",
+       "\n",
+       "                                         denominación  codigo_nacional  \n",
+       "0                       ALIANZA DE CENTRO DEMOCRÁTICO                1  \n",
+       "1   PARTIDO SOMOS ANDALUCES POR ANDALUCÍA Y LOS PU...                2  \n",
+       "2                          BNG-NÓS CANDIDATURA GALEGA                5  \n",
+       "3      COALICIÓN CANARIA-PARTIDO NACIONALISTA CANARIO                7  \n",
+       "4                    CIUDADANOS DE CENTRO DEMOCRÁTICO                8  \n",
+       "..                                                ...              ...  \n",
+       "76                                     UNIDOS PODEMOS               59  \n",
+       "77                            UNIÓN DEL PUEBLO LEONÉS               91  \n",
+       "78  UNIÓN DEL PUEBLO NAVARRO EN COALICIÓN CON EL P...               68  \n",
+       "79                        UNIÓN PROGRESO Y DEMOCRACIA               93  \n",
+       "80                                                VOX               94  \n",
+       "\n",
+       "[81 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "codigo_candidatura = pd.read_csv('codigo_candidatura.csv', index_col=False, encoding='UTF-8', \n",
+    "                                 sep = \";\", names = ['codigo_candidatura','siglas',\n",
+    "                                                     'denominación'\n",
+    "                                                     ,'codigo_nacional'], header=0)\n",
+    "codigo_candidatura"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tipo_eleccion</th>\n",
+       "      <th>ano_eleccion</th>\n",
+       "      <th>mes_eleccion</th>\n",
+       "      <th>num_vuelta</th>\n",
+       "      <th>codigo_comunidad</th>\n",
+       "      <th>codigo_ine</th>\n",
+       "      <th>codigo_distrito</th>\n",
+       "      <th>codigo_candidatura</th>\n",
+       "      <th>votos_obtenidos</th>\n",
+       "      <th>num_candidatos</th>\n",
+       "      <th>siglas</th>\n",
+       "      <th>denominación</th>\n",
+       "      <th>codigo_nacional</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>9</td>\n",
+       "      <td>49</td>\n",
+       "      <td>767</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PCPE</td>\n",
+       "      <td>PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>06</td>\n",
+       "      <td>39</td>\n",
+       "      <td>9</td>\n",
+       "      <td>49</td>\n",
+       "      <td>468</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PCPE</td>\n",
+       "      <td>PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>08</td>\n",
+       "      <td>40</td>\n",
+       "      <td>9</td>\n",
+       "      <td>49</td>\n",
+       "      <td>117</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PCPE</td>\n",
+       "      <td>PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9</td>\n",
+       "      <td>49</td>\n",
+       "      <td>627</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PCPE</td>\n",
+       "      <td>PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>01</td>\n",
+       "      <td>18</td>\n",
+       "      <td>9</td>\n",
+       "      <td>49</td>\n",
+       "      <td>641</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PCPE</td>\n",
+       "      <td>PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>822</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9</td>\n",
+       "      <td>21</td>\n",
+       "      <td>1026</td>\n",
+       "      <td>0</td>\n",
+       "      <td>EB-AZ</td>\n",
+       "      <td>ESCAÑOS EN BLANCO-AULKI ZURIAK</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>823</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>05</td>\n",
+       "      <td>38</td>\n",
+       "      <td>9</td>\n",
+       "      <td>78</td>\n",
+       "      <td>101120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PSOE-NCa</td>\n",
+       "      <td>PARTIDO SOCIALISTA OBRERO ESPAÑOL-NUEVA CANARIAS</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>824</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>05</td>\n",
+       "      <td>35</td>\n",
+       "      <td>9</td>\n",
+       "      <td>78</td>\n",
+       "      <td>119351</td>\n",
+       "      <td>2</td>\n",
+       "      <td>PSOE-NCa</td>\n",
+       "      <td>PARTIDO SOCIALISTA OBRERO ESPAÑOL-NUEVA CANARIAS</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>825</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>05</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9</td>\n",
+       "      <td>78</td>\n",
+       "      <td>220471</td>\n",
+       "      <td>3</td>\n",
+       "      <td>PSOE-NCa</td>\n",
+       "      <td>PARTIDO SOCIALISTA OBRERO ESPAÑOL-NUEVA CANARIAS</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>826</td>\n",
+       "      <td>02</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>06</td>\n",
+       "      <td>1</td>\n",
+       "      <td>02</td>\n",
+       "      <td>22</td>\n",
+       "      <td>9</td>\n",
+       "      <td>60</td>\n",
+       "      <td>22430</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PODEMOS-IU-</td>\n",
+       "      <td>UNIDOS PODEMOS EN ALTO ARAGÓN</td>\n",
+       "      <td>59</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>827 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    tipo_eleccion ano_eleccion mes_eleccion num_vuelta codigo_comunidad  \\\n",
+       "0              02         2016           06          1               01   \n",
+       "1              02         2016           06          1               06   \n",
+       "2              02         2016           06          1               08   \n",
+       "3              02         2016           06          1               15   \n",
+       "4              02         2016           06          1               01   \n",
+       "..            ...          ...          ...        ...              ...   \n",
+       "822            02         2016           06          1               14   \n",
+       "823            02         2016           06          1               05   \n",
+       "824            02         2016           06          1               05   \n",
+       "825            02         2016           06          1               05   \n",
+       "826            02         2016           06          1               02   \n",
+       "\n",
+       "    codigo_ine codigo_distrito  codigo_candidatura  votos_obtenidos  \\\n",
+       "0           11               9                  49              767   \n",
+       "1           39               9                  49              468   \n",
+       "2           40               9                  49              117   \n",
+       "3           99               9                  49              627   \n",
+       "4           18               9                  49              641   \n",
+       "..         ...             ...                 ...              ...   \n",
+       "822         99               9                  21             1026   \n",
+       "823         38               9                  78           101120   \n",
+       "824         35               9                  78           119351   \n",
+       "825         99               9                  78           220471   \n",
+       "826         22               9                  60            22430   \n",
+       "\n",
+       "     num_candidatos       siglas  \\\n",
+       "0                 0         PCPE   \n",
+       "1                 0         PCPE   \n",
+       "2                 0         PCPE   \n",
+       "3                 0         PCPE   \n",
+       "4                 0         PCPE   \n",
+       "..              ...          ...   \n",
+       "822               0        EB-AZ   \n",
+       "823               1     PSOE-NCa   \n",
+       "824               2     PSOE-NCa   \n",
+       "825               3     PSOE-NCa   \n",
+       "826               1  PODEMOS-IU-   \n",
+       "\n",
+       "                                         denominación  codigo_nacional  \n",
+       "0          PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA               49  \n",
+       "1          PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA               49  \n",
+       "2          PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA               49  \n",
+       "3          PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA               49  \n",
+       "4          PARTIDO COMUNISTA DE LOS PUEBLOS DE ESPAÑA               49  \n",
+       "..                                                ...              ...  \n",
+       "822                    ESCAÑOS EN BLANCO-AULKI ZURIAK               17  \n",
+       "823  PARTIDO SOCIALISTA OBRERO ESPAÑOL-NUEVA CANARIAS               77  \n",
+       "824  PARTIDO SOCIALISTA OBRERO ESPAÑOL-NUEVA CANARIAS               77  \n",
+       "825  PARTIDO SOCIALISTA OBRERO ESPAÑOL-NUEVA CANARIAS               77  \n",
+       "826                     UNIDOS PODEMOS EN ALTO ARAGÓN               59  \n",
+       "\n",
+       "[827 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Realizamos un merge\n",
+    "my_data.merge(codigo_candidatura,on= 'codigo_candidatura')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
