--- a/limpieza_datos_renta.ipynb
+++ b/limpieza_datos_renta.ipynb
@@ -2,182 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>2016</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>4800101001 Abadiño sección 01001</td>\n",
-       "      <td>16.437</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>4800101002 Abadiño sección 01002</td>\n",
-       "      <td>13.468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>4800101003 Abadiño sección 01003</td>\n",
-       "      <td>11.908</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>4800101004 Abadiño sección 01004</td>\n",
-       "      <td>14.471</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>4800101005 Abadiño sección 01005</td>\n",
-       "      <td>15.348</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>4800201001 Abanto y Ciérvana-Abanto Zierbena s...</td>\n",
-       "      <td>12.440</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6</td>\n",
-       "      <td>4800201002 Abanto y Ciérvana-Abanto Zierbena s...</td>\n",
-       "      <td>11.843</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7</td>\n",
-       "      <td>4800201004 Abanto y Ciérvana-Abanto Zierbena s...</td>\n",
-       "      <td>11.482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>8</td>\n",
-       "      <td>4800201005 Abanto y Ciérvana-Abanto Zierbena s...</td>\n",
-       "      <td>12.327</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>9</td>\n",
-       "      <td>4800202001 Abanto y Ciérvana-Abanto Zierbena s...</td>\n",
-       "      <td>12.929</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                          Unnamed: 0    2016\n",
-       "0                   4800101001 Abadiño sección 01001  16.437\n",
-       "1                   4800101002 Abadiño sección 01002  13.468\n",
-       "2                   4800101003 Abadiño sección 01003  11.908\n",
-       "3                   4800101004 Abadiño sección 01004  14.471\n",
-       "4                   4800101005 Abadiño sección 01005  15.348\n",
-       "5  4800201001 Abanto y Ciérvana-Abanto Zierbena s...  12.440\n",
-       "6  4800201002 Abanto y Ciérvana-Abanto Zierbena s...  11.843\n",
-       "7  4800201004 Abanto y Ciérvana-Abanto Zierbena s...  11.482\n",
-       "8  4800201005 Abanto y Ciérvana-Abanto Zierbena s...  12.327\n",
-       "9  4800202001 Abanto y Ciérvana-Abanto Zierbena s...  12.929"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
     "# Leemos el CSV con los códigos por provincia eliminando las 5 primeras columnas que ya\n",
-    "# hemos visto que no son relevantes.\n",
-    "bizkaia = pd.read_csv('Bizkaia.csv', index_col=False,encoding='iso-8859-1',sep=';',skiprows=5)\n",
-    "bizkaia.head(10)"
+    "# hemos visto que no son relevantes.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alava\n",
-      "Albacete\n",
-      "Alicante\n",
-      "Almeria\n",
-      "Asturias\n",
-      "Avila\n",
-      "Badajoz\n",
-      "Barcelona\n",
-      "Bizkaia\n",
-      "Burgos\n",
-      "Caceres\n",
-      "Cadiz\n",
-      "Cantabria\n",
-      "Islas Baleares\n",
-      "Castellon\n",
-      "Ceuta\n",
-      "Ciudad Real\n",
-      "Cordoba\n",
-      "Coruña\n",
-      "Cuenca\n",
-      "Gipuzkoa\n",
-      "Girona\n",
-      "Granada\n",
-      "Guadalajara\n",
-      "Huelva\n",
-      "Huesca\n",
-      "Jaen\n",
-      "La Rioja\n",
-      "Las Palmas\n",
-      "Leon\n",
-      "LLeida\n",
-      "Lugo\n",
-      "Madrid\n",
-      "Malaga\n",
-      "Melilla\n",
-      "Murcia\n",
-      "Navarra\n",
-      "Ourense\n",
-      "Palencia\n",
-      "Pontevedra\n",
-      "Salamanca\n",
-      "Santa Cruz de Tenerife\n",
-      "Segovia\n",
-      "Sevilla\n",
-      "Soria\n",
-      "Tarragona\n",
-      "Teruel\n",
-      "Toledo\n",
-      "Valencia\n",
-      "Valladolid\n",
-      "Zamora\n",
-      "Zaragoza\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -199,6 +40,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>provincia</th>\n",
        "      <th>poblacion</th>\n",
        "      <th>NIE</th>\n",
        "      <th>renta</th>\n",
@@ -207,30 +49,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
+       "      <td>Alava</td>\n",
        "      <td>Agurain/Salvatierra</td>\n",
        "      <td>1051</td>\n",
        "      <td>12.374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
+       "      <td>Alava</td>\n",
        "      <td>Alegría-Dulantzi</td>\n",
        "      <td>1001</td>\n",
        "      <td>13.086</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
+       "      <td>Alava</td>\n",
        "      <td>Amurrio</td>\n",
        "      <td>1002</td>\n",
        "      <td>13.691</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
+       "      <td>Alava</td>\n",
        "      <td>Añana</td>\n",
        "      <td>1049</td>\n",
        "      <td>15.548</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
+       "      <td>Alava</td>\n",
        "      <td>Aramaio</td>\n",
        "      <td>1003</td>\n",
        "      <td>17.194</td>\n",
@@ -240,60 +87,66 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>37016</td>\n",
+       "      <td>Zaragoza</td>\n",
        "      <td>Zaragoza</td>\n",
        "      <td>5029712010</td>\n",
        "      <td>14085.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>37017</td>\n",
+       "      <td>Zaragoza</td>\n",
        "      <td>Zuera</td>\n",
        "      <td>5029801001</td>\n",
        "      <td>12307.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>37018</td>\n",
+       "      <td>Zaragoza</td>\n",
        "      <td>Zuera</td>\n",
        "      <td>5029801002</td>\n",
        "      <td>10848.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>37019</td>\n",
+       "      <td>Zaragoza</td>\n",
        "      <td>Zuera</td>\n",
        "      <td>5029801003</td>\n",
        "      <td>10726.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>37020</td>\n",
+       "      <td>Zaragoza</td>\n",
        "      <td>Zuera</td>\n",
        "      <td>5029802001</td>\n",
        "      <td>12449.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>37021 rows × 3 columns</p>\n",
+       "<p>37021 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  poblacion         NIE      renta\n",
-       "0       Agurain/Salvatierra        1051     12.374\n",
-       "1          Alegría-Dulantzi        1001     13.086\n",
-       "2                   Amurrio        1002     13.691\n",
-       "3                     Añana        1049     15.548\n",
-       "4                   Aramaio        1003     17.194\n",
-       "...                     ...         ...        ...\n",
-       "37016              Zaragoza  5029712010  14085.000\n",
-       "37017                 Zuera  5029801001  12307.000\n",
-       "37018                 Zuera  5029801002  10848.000\n",
-       "37019                 Zuera  5029801003  10726.000\n",
-       "37020                 Zuera  5029802001  12449.000\n",
+       "      provincia             poblacion         NIE      renta\n",
+       "0         Alava   Agurain/Salvatierra        1051     12.374\n",
+       "1         Alava      Alegría-Dulantzi        1001     13.086\n",
+       "2         Alava               Amurrio        1002     13.691\n",
+       "3         Alava                 Añana        1049     15.548\n",
+       "4         Alava               Aramaio        1003     17.194\n",
+       "...         ...                   ...         ...        ...\n",
+       "37016  Zaragoza              Zaragoza  5029712010  14085.000\n",
+       "37017  Zaragoza                 Zuera  5029801001  12307.000\n",
+       "37018  Zaragoza                 Zuera  5029801002  10848.000\n",
+       "37019  Zaragoza                 Zuera  5029801003  10726.000\n",
+       "37020  Zaragoza                 Zuera  5029802001  12449.000\n",
        "\n",
-       "[37021 rows x 3 columns]"
+       "[37021 rows x 4 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,11 +165,14 @@
     "    NIE = []\n",
     "    renta = []\n",
     "    poblacion = []\n",
+    "    provincias = []\n",
     "    for i in bbdd:\n",
-    "        print(i)\n",
+    "        provincia = i\n",
     "        datos = pd.read_csv('datos_renta/'+i+'.csv', index_col=False,encoding='iso-8859-1',sep=';',skiprows=5)\n",
     "        datos.rename(columns={'Unnamed: 0':'identificador','2016':'renta'},inplace=True)\n",
     "        datos.drop(datos.tail(3).index,inplace=True)\n",
+    "        for i in range(len(datos.identificador)):\n",
+    "            provincias.append(provincia)\n",
     "        for i in range(len(datos.identificador)):\n",
     "            NIE_value = int(re.findall(\"[0-9]+\", datos.identificador[i])[0])\n",
     "            NIE.append(NIE_value) \n",
@@ -330,7 +186,7 @@
     "                datos.renta[i] = float('NaN')\n",
     "            renta_value = float(datos.renta[i])\n",
     "            renta.append(renta_value)\n",
-    "    d = {'poblacion':poblacion,'NIE':NIE,'renta':renta}\n",
+    "    d = {'provincia':provincias,'poblacion':poblacion,'NIE':NIE,'renta':renta}\n",
     "    datos = pd.DataFrame(d)\n",
     "    return datos\n",
     "\n",
