--- a/limpieza_datos_renta.ipynb
+++ b/limpieza_datos_renta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -16,8 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -52,35 +54,35 @@
        "      <td>Alava</td>\n",
        "      <td>Agurain/Salvatierra</td>\n",
        "      <td>1051</td>\n",
-       "      <td>12.374</td>\n",
+       "      <td>12374.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>Alava</td>\n",
        "      <td>Alegría-Dulantzi</td>\n",
        "      <td>1001</td>\n",
-       "      <td>13.086</td>\n",
+       "      <td>13086.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>Alava</td>\n",
        "      <td>Amurrio</td>\n",
        "      <td>1002</td>\n",
-       "      <td>13.691</td>\n",
+       "      <td>13691.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>Alava</td>\n",
        "      <td>Añana</td>\n",
        "      <td>1049</td>\n",
-       "      <td>15.548</td>\n",
+       "      <td>15548.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>Alava</td>\n",
        "      <td>Aramaio</td>\n",
        "      <td>1003</td>\n",
-       "      <td>17.194</td>\n",
+       "      <td>17194.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>...</td>\n",
@@ -94,35 +96,35 @@
        "      <td>Zaragoza</td>\n",
        "      <td>Zaragoza</td>\n",
        "      <td>5029712010</td>\n",
-       "      <td>14085.000</td>\n",
+       "      <td>14085.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>37017</td>\n",
        "      <td>Zaragoza</td>\n",
        "      <td>Zuera</td>\n",
        "      <td>5029801001</td>\n",
-       "      <td>12307.000</td>\n",
+       "      <td>12307.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>37018</td>\n",
        "      <td>Zaragoza</td>\n",
        "      <td>Zuera</td>\n",
        "      <td>5029801002</td>\n",
-       "      <td>10848.000</td>\n",
+       "      <td>10848.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>37019</td>\n",
        "      <td>Zaragoza</td>\n",
        "      <td>Zuera</td>\n",
        "      <td>5029801003</td>\n",
-       "      <td>10726.000</td>\n",
+       "      <td>10726.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>37020</td>\n",
        "      <td>Zaragoza</td>\n",
        "      <td>Zuera</td>\n",
        "      <td>5029802001</td>\n",
-       "      <td>12449.000</td>\n",
+       "      <td>12449.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -130,23 +132,23 @@
        "</div>"
       ],
       "text/plain": [
-       "      provincia             poblacion         NIE      renta\n",
-       "0         Alava   Agurain/Salvatierra        1051     12.374\n",
-       "1         Alava      Alegría-Dulantzi        1001     13.086\n",
-       "2         Alava               Amurrio        1002     13.691\n",
-       "3         Alava                 Añana        1049     15.548\n",
-       "4         Alava               Aramaio        1003     17.194\n",
-       "...         ...                   ...         ...        ...\n",
-       "37016  Zaragoza              Zaragoza  5029712010  14085.000\n",
-       "37017  Zaragoza                 Zuera  5029801001  12307.000\n",
-       "37018  Zaragoza                 Zuera  5029801002  10848.000\n",
-       "37019  Zaragoza                 Zuera  5029801003  10726.000\n",
-       "37020  Zaragoza                 Zuera  5029802001  12449.000\n",
+       "      provincia             poblacion         NIE    renta\n",
+       "0         Alava   Agurain/Salvatierra        1051  12374.0\n",
+       "1         Alava      Alegría-Dulantzi        1001  13086.0\n",
+       "2         Alava               Amurrio        1002  13691.0\n",
+       "3         Alava                 Añana        1049  15548.0\n",
+       "4         Alava               Aramaio        1003  17194.0\n",
+       "...         ...                   ...         ...      ...\n",
+       "37016  Zaragoza              Zaragoza  5029712010  14085.0\n",
+       "37017  Zaragoza                 Zuera  5029801001  12307.0\n",
+       "37018  Zaragoza                 Zuera  5029801002  10848.0\n",
+       "37019  Zaragoza                 Zuera  5029801003  10726.0\n",
+       "37020  Zaragoza                 Zuera  5029802001  12449.0\n",
        "\n",
        "[37021 rows x 4 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +161,7 @@
     "        \"Las Palmas\",\"Leon\",\"LLeida\",\"Lugo\",\"Madrid\",\"Malaga\",\"Melilla\",\"Murcia\",\"Navarra\",\"Ourense\",\"Palencia\",\"Pontevedra\",\n",
     "       \"Salamanca\",\"Santa Cruz de Tenerife\",\"Segovia\",\"Sevilla\",\"Soria\",\"Tarragona\",\"Teruel\",\"Toledo\",\"Valencia\",\n",
     "        \"Valladolid\",\"Zamora\",\"Zaragoza\"]\n",
-    "def get_NIE_poblacion (bbdd):\n",
+    "def get_BBDD_rentas (bbdd):\n",
     "    #Carga de ficheros CSV\n",
     "    base = []\n",
     "    NIE = []\n",
@@ -168,7 +170,8 @@
     "    provincias = []\n",
     "    for i in bbdd:\n",
     "        provincia = i\n",
-    "        datos = pd.read_csv('datos_renta/'+i+'.csv', index_col=False,encoding='iso-8859-1',sep=';',skiprows=5)\n",
+    "        datos = pd.read_csv('datos_renta/'+i+'.csv', index_col=False,encoding='iso-8859-1'\n",
+    "                            ,sep=';',skiprows=5, decimal= ',',thousands='.')\n",
     "        datos.rename(columns={'Unnamed: 0':'identificador','2016':'renta'},inplace=True)\n",
     "        datos.drop(datos.tail(3).index,inplace=True)\n",
     "        for i in range(len(datos.identificador)):\n",
@@ -190,16 +193,9 @@
     "    datos = pd.DataFrame(d)\n",
     "    return datos\n",
     "\n",
-    "basedatos = get_NIE_poblacion(bbdd)\n",
+    "basedatos = get_BBDD_rentas(bbdd)\n",
     "basedatos"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
