--- a/limpieza_datos_renta.ipynb
+++ b/limpieza_datos_renta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {
     "scrolled": true
    },
@@ -10,147 +10,24 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
+    "import numpy as np\n",
     "# Leemos el CSV con los códigos por provincia eliminando las 5 primeras columnas que ya\n",
     "# hemos visto que no son relevantes.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>provincia</th>\n",
-       "      <th>poblacion</th>\n",
-       "      <th>NIE</th>\n",
-       "      <th>renta</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Alava</td>\n",
-       "      <td>Agurain/Salvatierra</td>\n",
-       "      <td>1051</td>\n",
-       "      <td>12374.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Alava</td>\n",
-       "      <td>Alegría-Dulantzi</td>\n",
-       "      <td>1001</td>\n",
-       "      <td>13086.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Alava</td>\n",
-       "      <td>Amurrio</td>\n",
-       "      <td>1002</td>\n",
-       "      <td>13691.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Alava</td>\n",
-       "      <td>Añana</td>\n",
-       "      <td>1049</td>\n",
-       "      <td>15548.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Alava</td>\n",
-       "      <td>Aramaio</td>\n",
-       "      <td>1003</td>\n",
-       "      <td>17194.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>37016</td>\n",
-       "      <td>Zaragoza</td>\n",
-       "      <td>Zaragoza</td>\n",
-       "      <td>5029712010</td>\n",
-       "      <td>14085.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>37017</td>\n",
-       "      <td>Zaragoza</td>\n",
-       "      <td>Zuera</td>\n",
-       "      <td>5029801001</td>\n",
-       "      <td>12307.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>37018</td>\n",
-       "      <td>Zaragoza</td>\n",
-       "      <td>Zuera</td>\n",
-       "      <td>5029801002</td>\n",
-       "      <td>10848.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>37019</td>\n",
-       "      <td>Zaragoza</td>\n",
-       "      <td>Zuera</td>\n",
-       "      <td>5029801003</td>\n",
-       "      <td>10726.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>37020</td>\n",
-       "      <td>Zaragoza</td>\n",
-       "      <td>Zuera</td>\n",
-       "      <td>5029802001</td>\n",
-       "      <td>12449.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>37021 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      provincia             poblacion         NIE    renta\n",
-       "0         Alava   Agurain/Salvatierra        1051  12374.0\n",
-       "1         Alava      Alegría-Dulantzi        1001  13086.0\n",
-       "2         Alava               Amurrio        1002  13691.0\n",
-       "3         Alava                 Añana        1049  15548.0\n",
-       "4         Alava               Aramaio        1003  17194.0\n",
-       "...         ...                   ...         ...      ...\n",
-       "37016  Zaragoza              Zaragoza  5029712010  14085.0\n",
-       "37017  Zaragoza                 Zuera  5029801001  12307.0\n",
-       "37018  Zaragoza                 Zuera  5029801002  10848.0\n",
-       "37019  Zaragoza                 Zuera  5029801003  10726.0\n",
-       "37020  Zaragoza                 Zuera  5029802001  12449.0\n",
-       "\n",
-       "[37021 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "435243248.0\n"
+     ]
     }
    ],
    "source": [
@@ -159,8 +36,10 @@
     "        \"Bizkaia\",\"Burgos\",\"Caceres\",\"Cadiz\",\"Cantabria\",\"Islas Baleares\",\"Castellon\",\"Ceuta\",\"Ciudad Real\",\n",
     "        \"Cordoba\",\"Coruña\",\"Cuenca\",\"Gipuzkoa\",\"Girona\",\"Granada\",\"Guadalajara\",\"Huelva\",\"Huesca\",\"Jaen\",\"La Rioja\",\n",
     "        \"Las Palmas\",\"Leon\",\"LLeida\",\"Lugo\",\"Madrid\",\"Malaga\",\"Melilla\",\"Murcia\",\"Navarra\",\"Ourense\",\"Palencia\",\"Pontevedra\",\n",
-    "       \"Salamanca\",\"Santa Cruz de Tenerife\",\"Segovia\",\"Sevilla\",\"Soria\",\"Tarragona\",\"Teruel\",\"Toledo\",\"Valencia\",\n",
+    "        \"Salamanca\",\"Santa Cruz de Tenerife\",\"Segovia\",\"Sevilla\",\"Soria\",\"Tarragona\",\"Teruel\",\"Toledo\",\"Valencia\",\n",
     "        \"Valladolid\",\"Zamora\",\"Zaragoza\"]\n",
+    "\n",
+    "\n",
     "def get_BBDD_rentas (bbdd):\n",
     "    #Carga de ficheros CSV\n",
     "    base = []\n",
@@ -187,14 +66,39 @@
     "        for i in range(len(datos.identificador)):\n",
     "            if datos.renta[i] == '.':\n",
     "                datos.renta[i] = float('NaN')\n",
-    "            renta_value = float(datos.renta[i])\n",
-    "            renta.append(renta_value)\n",
+    "            if isinstance(datos.renta[i],str) == True:\n",
+    "                renta_value = float(re.sub(\"\\\\.\",\"\",datos.renta[i]))\n",
+    "                renta.append(renta_value)\n",
+    "            else:\n",
+    "                renta_value = float(datos.renta[i])\n",
+    "                renta.append(renta_value)\n",
     "    d = {'provincia':provincias,'poblacion':poblacion,'NIE':NIE,'renta':renta}\n",
     "    datos = pd.DataFrame(d)\n",
     "    return datos\n",
     "\n",
     "basedatos = get_BBDD_rentas(bbdd)\n",
     "basedatos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10746'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos = pd.read_csv('datos_renta/Cantabria.csv', index_col=False,encoding='iso-8859-1'\n",
+    "                    ,sep=';',skiprows=5, decimal= ',', thousands= '.')\n"
    ]
   },
   {
