--- a/limpieza_datos_renta.ipynb
+++ b/limpieza_datos_renta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -17,17 +17,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "435243248.0\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>provincia</th>\n",
+       "      <th>poblacion</th>\n",
+       "      <th>NIE</th>\n",
+       "      <th>renta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>Alava</td>\n",
+       "      <td>Agurain/Salvatierra</td>\n",
+       "      <td>1051</td>\n",
+       "      <td>12374.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Alava</td>\n",
+       "      <td>Alegría-Dulantzi</td>\n",
+       "      <td>1001</td>\n",
+       "      <td>13086.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Alava</td>\n",
+       "      <td>Amurrio</td>\n",
+       "      <td>1002</td>\n",
+       "      <td>13691.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Alava</td>\n",
+       "      <td>Añana</td>\n",
+       "      <td>1049</td>\n",
+       "      <td>15548.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Alava</td>\n",
+       "      <td>Aramaio</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>17194.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36284</td>\n",
+       "      <td>Zaragoza</td>\n",
+       "      <td>Zaragoza</td>\n",
+       "      <td>5029712010</td>\n",
+       "      <td>14085.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36285</td>\n",
+       "      <td>Zaragoza</td>\n",
+       "      <td>Zuera</td>\n",
+       "      <td>5029801001</td>\n",
+       "      <td>12307.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36286</td>\n",
+       "      <td>Zaragoza</td>\n",
+       "      <td>Zuera</td>\n",
+       "      <td>5029801002</td>\n",
+       "      <td>10848.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36287</td>\n",
+       "      <td>Zaragoza</td>\n",
+       "      <td>Zuera</td>\n",
+       "      <td>5029801003</td>\n",
+       "      <td>10726.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36288</td>\n",
+       "      <td>Zaragoza</td>\n",
+       "      <td>Zuera</td>\n",
+       "      <td>5029802001</td>\n",
+       "      <td>12449.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>36289 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      provincia             poblacion         NIE    renta\n",
+       "0         Alava   Agurain/Salvatierra        1051  12374.0\n",
+       "1         Alava      Alegría-Dulantzi        1001  13086.0\n",
+       "2         Alava               Amurrio        1002  13691.0\n",
+       "3         Alava                 Añana        1049  15548.0\n",
+       "4         Alava               Aramaio        1003  17194.0\n",
+       "...         ...                   ...         ...      ...\n",
+       "36284  Zaragoza              Zaragoza  5029712010  14085.0\n",
+       "36285  Zaragoza                 Zuera  5029801001  12307.0\n",
+       "36286  Zaragoza                 Zuera  5029801002  10848.0\n",
+       "36287  Zaragoza                 Zuera  5029801003  10726.0\n",
+       "36288  Zaragoza                 Zuera  5029802001  12449.0\n",
+       "\n",
+       "[36289 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -82,20 +206,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'10746'"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "datos = pd.read_csv('datos_renta/Cantabria.csv', index_col=False,encoding='iso-8859-1'\n",
     "                    ,sep=';',skiprows=5, decimal= ',', thousands= '.')\n"
