--- a/datos_elecciones_Miryam.ipynb
+++ b/datos_elecciones_Miryam.ipynb
@@ -6,14 +6,7 @@
    "source": [
     "# Elecciones España 2016: ¿Cuántos votos obtuvo cada partido? \n",
     "\n",
-    "En esta sección del trabajo analizamos los datos de las elecciones de 2016 para conocer los votos que obtuvo cada partido a nivel congreso.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "El Ministerio del Interior español nos proporciona una serie de datos para poder realizar este análisis."
+    "En esta sección del trabajo se analizan los datos de las elecciones de 2016. De esta forma, conoceremos los votos que obtuvo cada partido a nivel nacional, para posteriormente cruzarlos con los datos de renta media por provincia. Para ello, hemos utilizado los datos que proporciona el Ministerio del Interior."
    ]
   },
   {
@@ -105,14 +98,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Formato Ministerio del Interior\n",
+    "## Limpieza datos elecciones 2016\n",
     "\n",
-    "Se realizó la siguiente función para obtener los datos del CSV y crear el formato marcado por el Ministerio del Interior. "
+    "Se ha realizado la siguiente función para obtener los datos del CSV del Ministerio del Interior y adecuarlos a un formato adecuado para realizar el estudio."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +260,7 @@
        "[827 rows x 5 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +296,7 @@
     "    return datos_elecciones_2016\n",
     "\n",
     "my_data = get_cosas(votos)\n",
-    "my_data = my_data.drop(columns = ['tipo_eleccion','ano_eleccion','mes_eleccion','num_vuelta',\n",
+    "my_data = my_data.drop(columns=['tipo_eleccion','ano_eleccion','mes_eleccion','num_vuelta',\n",
     "                                 'codigo_distrito'])\n",
     "my_data"
    ]
@@ -333,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +469,7 @@
        "[81 rows x 4 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +480,7 @@
     "                                                     ,'codigo_candidatura','siglas',\n",
     "                                                     'denominación'\n",
     "                                                     ,'codigo_nacional','sigla_nacional'], header=0)\n",
-    "codigo_candidatura = codigo_candidatura.drop(columns = ['tipo_eleccion','ano','mes','codigo_nacional'])\n",
+    "codigo_candidatura = codigo_candidatura.drop(columns=['tipo_eleccion','ano','mes','codigo_nacional'])\n",
     "codigo_candidatura"
    ]
   },
